--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     console.log(i);
                 }
                 // add margin to allow space for numbering
-                $(this).css("margin-left", "20px";"font","italic");
+                $(this).css("margin-left", "20px");
             });
         };
 
